# rsidx

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cibuild.yml
rsidx/: __init__.py  __main__.py  _version.py  cli.py  index.py  search.py
rsidx/tests/: __init__.py  test_index.py  test_package.py  test_search.py
rsidx/tests/data/: chr17-sample.rsidx  chr17-sample.vcf.gz.tbi  chr4-sample-corrupted-ids.rsidx  chr4-sample-corrupted-ids.vcf.gz.tbi  chr9-multi.rsidx  chr9-multi.vcf.gz.tbi  five-rsids.txt  multiple_id.rsidx  multiple_id.vcf.gz.tbi  overlap.sqlite3  overlap.vcf.gz.tbi
